--- a/src/layouts/index.scss
+++ b/src/layouts/index.scss
@@ -20,12 +20,12 @@ body {
 // summary {
 //   display: block;
 // }
-audio,
-canvas,
-progress,
-video {
-  display: inline-block;
-}
+// audio,
+// canvas,
+// progress,
+// video {
+//   display: inline-block;
+// }
 audio:not([controls]) {
   display: none;
   height: 0;
@@ -88,13 +88,7 @@ sup {
 svg:not(:root) {
   overflow: hidden;
 }
-code,
-kbd,
-pre,
-samp {
-  font-family: monospace, monospace;
-  font-size: 1em;
-}
+
 figure {
   margin: 1em 40px;
 }
@@ -183,7 +177,7 @@ textarea {
   font: inherit;
 }
 html {
-  font: 112.5%/1.45em georgia, serif;
+
   box-sizing: border-box;
   overflow-y: scroll;
 }
@@ -196,28 +190,28 @@ html {
 // *:after {
 //   box-sizing: inherit;
 // }
-body {
-  color: hsla(0, 0%, 0%, 0.8);
-  font-family: georgia, serif;
-  font-weight: normal;
-  word-wrap: break-word;
-  font-kerning: normal;
-  -moz-font-feature-settings: "kern", "liga", "clig", "calt";
-  -ms-font-feature-settings: "kern", "liga", "clig", "calt";
-  -webkit-font-feature-settings: "kern", "liga", "clig", "calt";
-  font-feature-settings: "kern", "liga", "clig", "calt";
-}
-img {
-  max-width: 100%;
-  margin-left: 0;
-  margin-right: 0;
-  margin-top: 0;
-  padding-bottom: 0;
-  padding-left: 0;
-  padding-right: 0;
-  padding-top: 0;
-  margin-bottom: 1.45rem;
-}
+// body {
+//   color: hsla(0, 0%, 0%, 0.8);
+//   font-family: georgia, serif;
+//   font-weight: normal;
+//   word-wrap: break-word;
+//   font-kerning: normal;
+//   -moz-font-feature-settings: "kern", "liga", "clig", "calt";
+//   -ms-font-feature-settings: "kern", "liga", "clig", "calt";
+//   -webkit-font-feature-settings: "kern", "liga", "clig", "calt";
+//   font-feature-settings: "kern", "liga", "clig", "calt";
+// }
+// img {
+//   max-width: 100%;
+//   margin-left: 0;
+//   margin-right: 0;
+//   margin-top: 0;
+//   padding-bottom: 0;
+//   padding-left: 0;
+//   padding-right: 0;
+//   padding-top: 0;
+//   margin-bottom: 1.45rem;
+// // }
 h1 {
   margin-left: 0;
   margin-right: 0;
@@ -228,8 +222,6 @@ h1 {
   padding-top: 0;
   margin-bottom: 1.45rem;
   color: inherit;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   font-weight: bold;
   text-rendering: optimizeLegibility;
   font-size: 2.25rem;
@@ -245,8 +237,6 @@ h2 {
   padding-top: 0;
   margin-bottom: 1.45rem;
   color: inherit;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   font-weight: bold;
   text-rendering: optimizeLegibility;
   font-size: 1.62671rem;
@@ -262,8 +252,7 @@ h3 {
   padding-top: 0;
   margin-bottom: 1.45rem;
   color: inherit;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  
   font-weight: bold;
   text-rendering: optimizeLegibility;
   font-size: 1.38316rem;
@@ -279,8 +268,7 @@ h4 {
   padding-top: 0;
   margin-bottom: 1.45rem;
   color: inherit;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+ 
   font-weight: bold;
   text-rendering: optimizeLegibility;
   font-size: 1rem;
@@ -296,9 +284,7 @@ h5 {
   padding-top: 0;
   margin-bottom: 1.45rem;
   color: inherit;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  font-weight: bold;
+  
   text-rendering: optimizeLegibility;
   font-size: 0.85028rem;
   line-height: 1.1;
@@ -313,8 +299,7 @@ h6 {
   padding-top: 0;
   margin-bottom: 1.45rem;
   color: inherit;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+
   font-weight: bold;
   text-rendering: optimizeLegibility;
   font-size: 0.78405rem;
@@ -617,17 +602,25 @@ pre tt:before,
 pre tt:after {
   content: "";
 }
+
+
+//global styles
 $tan: #D8BD8A;
 $cream: #D8D78F;
 $pink: #AA5042;
 $green: #87A330;
 $taupe: #4B3831;
 
+html{
+  font-family: 'Fjalla One', sans-serif;
+}
 body{
   background-color: $tan;
   color: $taupe;
-  font-family: 'Fjalla One', sans-serif;
+ 
 }
+
+//landing page
 .background{
   background-color:$green;
   height:500px;
@@ -635,11 +628,12 @@ body{
     // color:$tan;
     text-align:center;
     font-size: 8em;
-    padding: 30px;
+    padding: 20px;
     padding-top: 300px;
     font-family: 'Fjalla One', sans-serif;
+    margin-bottom: 2.2rem;
   }
-  p{
+  h2{
   text-align: center;
   // color:$tan;
   font-size:2em;
@@ -650,6 +644,8 @@ body{
 background-color:none;
 height:250px;
 }
+
+//about me
 .imgcontainer{
   display: flex;
   justify-content: space-around;
