--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -15,7 +15,7 @@ width: 100px;
 justify-content: center;
 align-items: center;
 p{
-margin-top:-20px;
+margin-top:-10px;
 text-align:center;
 }
 }
@@ -31,5 +31,10 @@ width: 75px;
   color: $taupe;
   margin: 1em;
   border-bottom: 1px $taupe solid;
-text-align: center;
+  text-align: center;
+  display:flex;
+flex-direction: column;
+flex-wrap: wrap;
+justify-content: center;
+align-items: center;
 }
