--- a/src/components/Projects/style.scss
+++ b/src/components/Projects/style.scss
@@ -1,4 +1,20 @@
 .pic{
-    height: 400px;
-    width: 500px;
+    height: 200px;
+    width: 300px;
+    margin: 0 auto;
+}
+.work{
+    margin: 3px;
+    text-align:center;
+}
+
+.container{
+    height: 100vh;
+    width: 100%;
+    margin-top:30px;
+        font-size: 40px; 
+        display:flex;
+      flex-direction: row;
+      justify-content: space-around;
+      align-items: center;
 }
