--- a/src/components/Wrapper/style.scss
+++ b/src/components/Wrapper/style.scss
@@ -1,5 +1,5 @@
 .wrapper{
-    height: 100%;
+    height: 500px;;
      width: 100%;
     display: flex;
     flex-direction: row wrap;
@@ -8,3 +8,5 @@
     align-content: flex-start;
     padding:0;
 }
+
+
