--- a/src/layouts/index.scss
+++ b/src/layouts/index.scss
@@ -606,11 +606,11 @@ pre tt:after {
 
 //global styles
 $tan: #FFF275;
-$cream: #98B06F;
-$pink: #A23E48;
-$green: #726E60;
-$taupe: #442B48;
-
+$cream: #92977E;
+$pink: #E84855;
+$green: #403F4C;
+$taupe:#FEFCAD;
+#FFF275
 html{
   font-family: 'Fjalla One', sans-serif;
 }
