--- a/src/components/Wrapper/style.scss
+++ b/src/components/Wrapper/style.scss
@@ -2,14 +2,12 @@
     display: flex;
     flex-direction: row wrap;
     // padding: 20px;
-    // justify-content: space-around;
-    margin-top: 300px;
+    justify-content: space-around;
     align-content: flex-start;
-    border: red solid 1px;
     padding: 10px;
 }
-h1{
+.project-title{
  text-align: center;
- font-size: 70px;
- flex: 1;
+ font-size: 90px;
+ margin-top: 300px;
 }
