--- a/src/layouts/index.scss
+++ b/src/layouts/index.scss
@@ -599,25 +599,26 @@ html{
 body{
   background-color: $cream;
   color: $green;
-  font-family: 'Londrina Solid', cursive;
+  font-family: 'Imprima', sans-serif;
   margin: 0 auto;
 }
 
 //landing page
 .background{
   background-color:$tan;
-  height:500px;
+  height:460px;
   .title{
     text-align:center;
     font-size: 8em;
-    padding: 20px;
     padding-top: 300px;
-    margin-bottom: 2.2rem;
+    margin-bottom: 2rem;
+    font-family: 'Londrina Solid', cursive;
   }
   h2{
   text-align: center;
   // color:$tan;
   font-size:2em;
+  
   }
 }
 .background2{
