--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -1,8 +1,8 @@
-$tan: #D8BD8A;
-$cream: #D8D78F;
-$pink: #AA5042;
-$green: #87A330;
-$taupe: #4B3831;
+$tan: #BFAB25;
+$cream: #A4B494;
+$pink: #F9DEC9;
+$green:#54494B;
+$taupe:#3A405A;
 
 .nav{
 margin: 0 auto;
