--- a/src/layouts/index.scss
+++ b/src/layouts/index.scss
@@ -587,18 +587,18 @@ pre tt:after {
 
 
 //global styles
-$tan: #FFF275;
-$cream: #92977E;
-$pink: #E84855;
-$green: #403F4C;
-$taupe:#FEFCAD;
-#FFF275
+$tan: #BFAB25;
+$cream: #A4B494;
+$pink: #F9DEC9;
+$green:#54494B;
+$taupe:#3A405A;
+
 html{
   font-family: 'Londrina Solid', cursive;
 }
 body{
   background-color: $cream;
-  color: $green;
+  color: $taupe;
   font-family: 'Imprima', sans-serif;
   margin: 0 auto;
 }
@@ -640,6 +640,8 @@ height:150px;
   width: 600px;
   margin-left: 100px;
   margin-top: 400px;
+  border-radius: 1px;
+  box-shadow: 5px 10px 20px $green;
 }
  img{
    width: 400px;
